// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the model is the whole drawing > a fresh day: the forecast alone 1`] = `
{
  "areas": [],
  "caption": {
    "text": "OŚ CZASU · POPYT vs POKRYCIE [MW]",
    "x": 8,
    "y": 14,
  },
  "cells": [
    {
      "absTurn": 0,
      "dayIndex": 0,
      "hours": "00–03",
      "name": "NOC",
      "selected": true,
      "state": "current",
      "turnIndex": 0,
      "width": 132.5,
      "x": 0,
    },
    {
      "absTurn": 1,
      "dayIndex": 0,
      "hours": "03–06",
      "name": "PRZEDŚWIT",
      "selected": false,
      "state": "future",
      "turnIndex": 1,
      "width": 132.5,
      "x": 132.5,
    },
    {
      "absTurn": 2,
      "dayIndex": 0,
      "hours": "06–09",
      "name": "RANO",
      "selected": false,
      "state": "future",
      "turnIndex": 2,
      "width": 132.5,
      "x": 265,
    },
    {
      "absTurn": 3,
      "dayIndex": 0,
      "hours": "09–12",
      "name": "PRZEDPOŁ.",
      "selected": false,
      "state": "future",
      "turnIndex": 3,
      "width": 132.5,
      "x": 397.5,
    },
    {
      "absTurn": 4,
      "dayIndex": 0,
      "hours": "12–15",
      "name": "POŁUDNIE",
      "selected": false,
      "state": "future",
      "turnIndex": 4,
      "width": 132.5,
      "x": 530,
    },
    {
      "absTurn": 5,
      "dayIndex": 0,
      "hours": "15–18",
      "name": "POPOŁ.",
      "selected": false,
      "state": "future",
      "turnIndex": 5,
      "width": 132.5,
      "x": 662.5,
    },
    {
      "absTurn": 6,
      "dayIndex": 0,
      "hours": "18–21",
      "name": "SZCZYT WIECZ.",
      "selected": false,
      "state": "future",
      "turnIndex": 6,
      "width": 132.5,
      "x": 795,
    },
    {
      "absTurn": 7,
      "dayIndex": 0,
      "hours": "21–24",
      "name": "PÓŹNY WIECZ.",
      "selected": false,
      "state": "future",
      "turnIndex": 7,
      "width": 132.5,
      "x": 927.5,
    },
  ],
  "currentBlock": {
    "width": 132.5,
    "x": 0,
  },
  "dayGridX": [],
  "days": [
    {
      "columns": 8,
      "dayIndex": 0,
      "label": "ROK 1 · STYCZEŃ · DOBA ROBOCZA A",
    },
  ],
  "demandLine": [],
  "forecast": {
    "band": [
      {
        "x": 0,
        "y": 71.6,
      },
      {
        "x": 44.2,
        "y": 76.6,
      },
      {
        "x": 88.3,
        "y": 78.8,
      },
      {
        "x": 132.5,
        "y": 78.2,
      },
      {
        "x": 176.7,
        "y": 74.9,
      },
      {
        "x": 220.8,
        "y": 67.7,
      },
      {
        "x": 265,
        "y": 55.5,
      },
      {
        "x": 309.2,
        "y": 42.2,
      },
      {
        "x": 353.3,
        "y": 34.4,
      },
      {
        "x": 397.5,
        "y": 34.5,
      },
      {
        "x": 441.7,
        "y": 31.4,
      },
      {
        "x": 485.8,
        "y": 30.7,
      },
      {
        "x": 530,
        "y": 31.8,
      },
      {
        "x": 574.2,
        "y": 31.7,
      },
      {
        "x": 618.3,
        "y": 33,
      },
      {
        "x": 662.5,
        "y": 35.2,
      },
      {
        "x": 706.7,
        "y": 29.5,
      },
      {
        "x": 750.8,
        "y": 24.4,
      },
      {
        "x": 795,
        "y": 21,
      },
      {
        "x": 839.2,
        "y": 22.1,
      },
      {
        "x": 883.3,
        "y": 30,
      },
      {
        "x": 927.5,
        "y": 39.5,
      },
      {
        "x": 971.7,
        "y": 51.7,
      },
      {
        "x": 1015.8,
        "y": 57.3,
      },
      {
        "x": 1060,
        "y": 57.3,
      },
      {
        "x": 1060,
        "y": 69,
      },
      {
        "x": 1015.8,
        "y": 69,
      },
      {
        "x": 971.7,
        "y": 63.4,
      },
      {
        "x": 927.5,
        "y": 51.2,
      },
      {
        "x": 883.3,
        "y": 41.7,
      },
      {
        "x": 839.2,
        "y": 33.8,
      },
      {
        "x": 795,
        "y": 32.7,
      },
      {
        "x": 750.8,
        "y": 36.1,
      },
      {
        "x": 706.7,
        "y": 41.2,
      },
      {
        "x": 662.5,
        "y": 46.9,
      },
      {
        "x": 618.3,
        "y": 44.7,
      },
      {
        "x": 574.2,
        "y": 43.4,
      },
      {
        "x": 530,
        "y": 43.5,
      },
      {
        "x": 485.8,
        "y": 42.4,
      },
      {
        "x": 441.7,
        "y": 42.2,
      },
      {
        "x": 397.5,
        "y": 44.6,
      },
      {
        "x": 353.3,
        "y": 43.7,
      },
      {
        "x": 309.2,
        "y": 50.6,
      },
      {
        "x": 265,
        "y": 63.1,
      },
      {
        "x": 220.8,
        "y": 74.6,
      },
      {
        "x": 176.7,
        "y": 81,
      },
      {
        "x": 132.5,
        "y": 83.5,
      },
      {
        "x": 88.3,
        "y": 83.2,
      },
      {
        "x": 44.2,
        "y": 80.3,
      },
      {
        "x": 0,
        "y": 74.4,
      },
    ],
    "mid": [
      {
        "x": 0,
        "y": 73,
      },
      {
        "x": 44.2,
        "y": 78.4,
      },
      {
        "x": 88.3,
        "y": 81,
      },
      {
        "x": 132.5,
        "y": 80.8,
      },
      {
        "x": 176.7,
        "y": 77.9,
      },
      {
        "x": 220.8,
        "y": 71.2,
      },
      {
        "x": 265,
        "y": 59.3,
      },
      {
        "x": 309.2,
        "y": 46.4,
      },
      {
        "x": 353.3,
        "y": 39.1,
      },
      {
        "x": 397.5,
        "y": 39.6,
      },
      {
        "x": 441.7,
        "y": 36.8,
      },
      {
        "x": 485.8,
        "y": 36.5,
      },
      {
        "x": 530,
        "y": 37.7,
      },
      {
        "x": 574.2,
        "y": 37.5,
      },
      {
        "x": 618.3,
        "y": 38.8,
      },
      {
        "x": 662.5,
        "y": 41.1,
      },
      {
        "x": 706.7,
        "y": 35.3,
      },
      {
        "x": 750.8,
        "y": 30.3,
      },
      {
        "x": 795,
        "y": 26.9,
      },
      {
        "x": 839.2,
        "y": 27.9,
      },
      {
        "x": 883.3,
        "y": 35.9,
      },
      {
        "x": 927.5,
        "y": 45.3,
      },
      {
        "x": 971.7,
        "y": 57.6,
      },
      {
        "x": 1015.8,
        "y": 63.2,
      },
      {
        "x": 1060,
        "y": 63.2,
      },
    ],
  },
  "gridX": [
    132.5,
    265,
    397.5,
    530,
    662.5,
    795,
    927.5,
  ],
  "height": 130,
  "legend": [
    {
      "color": "var(--en-nuclear)",
      "label": "JĄDROWA",
    },
    {
      "color": "var(--en-coal)",
      "label": "WĘGIEL",
    },
    {
      "color": "var(--en-gas)",
      "label": "GAZ",
    },
    {
      "color": "var(--en-wind)",
      "label": "WIATR",
    },
    {
      "color": "var(--en-pv)",
      "label": "PV",
    },
    {
      "color": "var(--en-ok)",
      "label": "MAGAZYN",
    },
    {
      "color": "var(--en-storage)",
      "label": "IMPORT",
    },
  ],
  "note": "— PRAWDA · ┄ PROGNOZA (PASMO)",
  "nowLabel": {
    "text": "TERAZ",
    "x": 6,
    "y": 28,
  },
  "nowX": 0,
  "pastForecast": null,
  "range": {
    "from": 0,
    "lastTurn": 7,
    "maxFrom": 0,
    "minFrom": 0,
    "pendingTurn": 0,
    "selectedTurn": 0,
  },
  "scaleLabel": {
    "text": "100 MW",
    "x": 1052,
    "y": 14,
  },
  "scaleMw": 100,
  "selectedBlock": {
    "width": 132.5,
    "x": 0,
  },
  "width": 1060,
}
`;

exports[`the model is the whole drawing > a window over resolved turns 1`] = `
{
  "areas": [
    {
      "color": "var(--en-gas)",
      "key": "gas",
      "points": [
        {
          "x": 0,
          "y": 77.2,
        },
        {
          "x": 79.5,
          "y": 77.2,
        },
        {
          "x": 185.5,
          "y": 76.8,
        },
        {
          "x": 212,
          "y": 76.8,
        },
        {
          "x": 318,
          "y": 48.3,
        },
        {
          "x": 344.5,
          "y": 48.3,
        },
        {
          "x": 450.5,
          "y": 38,
        },
        {
          "x": 477,
          "y": 38,
        },
        {
          "x": 583,
          "y": 38.6,
        },
        {
          "x": 609.5,
          "y": 38.6,
        },
        {
          "x": 715.5,
          "y": 36,
        },
        {
          "x": 742,
          "y": 36,
        },
        {
          "x": 848,
          "y": 30.6,
        },
        {
          "x": 874.5,
          "y": 30.6,
        },
        {
          "x": 980.5,
          "y": 56.2,
        },
        {
          "x": 1060,
          "y": 56.2,
        },
        {
          "x": 1060,
          "y": 130,
        },
        {
          "x": 980.5,
          "y": 130,
        },
        {
          "x": 874.5,
          "y": 130,
        },
        {
          "x": 848,
          "y": 130,
        },
        {
          "x": 742,
          "y": 130,
        },
        {
          "x": 715.5,
          "y": 130,
        },
        {
          "x": 609.5,
          "y": 130,
        },
        {
          "x": 583,
          "y": 130,
        },
        {
          "x": 477,
          "y": 130,
        },
        {
          "x": 450.5,
          "y": 130,
        },
        {
          "x": 344.5,
          "y": 130,
        },
        {
          "x": 318,
          "y": 130,
        },
        {
          "x": 212,
          "y": 130,
        },
        {
          "x": 185.5,
          "y": 130,
        },
        {
          "x": 79.5,
          "y": 130,
        },
        {
          "x": 0,
          "y": 130,
        },
      ],
    },
  ],
  "caption": {
    "text": "OŚ CZASU · POPYT vs POKRYCIE [MW]",
    "x": 8,
    "y": 14,
  },
  "cells": [
    {
      "absTurn": 0,
      "dayIndex": 0,
      "hours": "00–03",
      "name": "NOC",
      "selected": false,
      "state": "past",
      "turnIndex": 0,
      "width": 132.5,
      "x": 0,
    },
    {
      "absTurn": 1,
      "dayIndex": 0,
      "hours": "03–06",
      "name": "PRZEDŚWIT",
      "selected": false,
      "state": "past",
      "turnIndex": 1,
      "width": 132.5,
      "x": 132.5,
    },
    {
      "absTurn": 2,
      "dayIndex": 0,
      "hours": "06–09",
      "name": "RANO",
      "selected": true,
      "state": "past",
      "turnIndex": 2,
      "width": 132.5,
      "x": 265,
    },
    {
      "absTurn": 3,
      "dayIndex": 0,
      "hours": "09–12",
      "name": "PRZEDPOŁ.",
      "selected": false,
      "state": "past",
      "turnIndex": 3,
      "width": 132.5,
      "x": 397.5,
    },
    {
      "absTurn": 4,
      "dayIndex": 0,
      "hours": "12–15",
      "name": "POŁUDNIE",
      "selected": false,
      "state": "past",
      "turnIndex": 4,
      "width": 132.5,
      "x": 530,
    },
    {
      "absTurn": 5,
      "dayIndex": 0,
      "hours": "15–18",
      "name": "POPOŁ.",
      "selected": false,
      "state": "past",
      "turnIndex": 5,
      "width": 132.5,
      "x": 662.5,
    },
    {
      "absTurn": 6,
      "dayIndex": 0,
      "hours": "18–21",
      "name": "SZCZYT WIECZ.",
      "selected": false,
      "state": "past",
      "turnIndex": 6,
      "width": 132.5,
      "x": 795,
    },
    {
      "absTurn": 7,
      "dayIndex": 0,
      "hours": "21–24",
      "name": "PÓŹNY WIECZ.",
      "selected": false,
      "state": "past",
      "turnIndex": 7,
      "width": 132.5,
      "x": 927.5,
    },
  ],
  "currentBlock": null,
  "dayGridX": [],
  "days": [
    {
      "columns": 8,
      "dayIndex": 0,
      "label": "ROK 1 · STYCZEŃ · DOBA ROBOCZA A",
    },
  ],
  "demandLine": [
    {
      "x": 0,
      "y": 78.2,
    },
    {
      "x": 79.5,
      "y": 78.2,
    },
    {
      "x": 185.5,
      "y": 77.9,
    },
    {
      "x": 212,
      "y": 77.9,
    },
    {
      "x": 318,
      "y": 50,
    },
    {
      "x": 344.5,
      "y": 50,
    },
    {
      "x": 450.5,
      "y": 39.8,
    },
    {
      "x": 477,
      "y": 39.8,
    },
    {
      "x": 583,
      "y": 40.4,
    },
    {
      "x": 609.5,
      "y": 40.4,
    },
    {
      "x": 715.5,
      "y": 37.9,
    },
    {
      "x": 742,
      "y": 37.9,
    },
    {
      "x": 848,
      "y": 32.6,
    },
    {
      "x": 874.5,
      "y": 32.6,
    },
    {
      "x": 980.5,
      "y": 57.7,
    },
    {
      "x": 1060,
      "y": 57.7,
    },
  ],
  "forecast": null,
  "gridX": [
    132.5,
    265,
    397.5,
    530,
    662.5,
    795,
    927.5,
  ],
  "height": 130,
  "legend": [
    {
      "color": "var(--en-nuclear)",
      "label": "JĄDROWA",
    },
    {
      "color": "var(--en-coal)",
      "label": "WĘGIEL",
    },
    {
      "color": "var(--en-gas)",
      "label": "GAZ",
    },
    {
      "color": "var(--en-wind)",
      "label": "WIATR",
    },
    {
      "color": "var(--en-pv)",
      "label": "PV",
    },
    {
      "color": "var(--en-ok)",
      "label": "MAGAZYN",
    },
    {
      "color": "var(--en-storage)",
      "label": "IMPORT",
    },
  ],
  "note": "— PRAWDA · ┄ PROGNOZA (PASMO)",
  "nowLabel": {
    "text": "TERAZ",
    "x": 6,
    "y": 28,
  },
  "nowX": null,
  "pastForecast": {
    "band": [
      {
        "x": 0,
        "y": 75.7,
      },
      {
        "x": 79.5,
        "y": 75.7,
      },
      {
        "x": 185.5,
        "y": 75.3,
      },
      {
        "x": 212,
        "y": 75.3,
      },
      {
        "x": 318,
        "y": 47.4,
      },
      {
        "x": 344.5,
        "y": 47.4,
      },
      {
        "x": 450.5,
        "y": 37.3,
      },
      {
        "x": 477,
        "y": 37.3,
      },
      {
        "x": 583,
        "y": 37.8,
      },
      {
        "x": 609.5,
        "y": 37.8,
      },
      {
        "x": 715.5,
        "y": 35.4,
      },
      {
        "x": 742,
        "y": 35.4,
      },
      {
        "x": 848,
        "y": 30,
      },
      {
        "x": 874.5,
        "y": 30,
      },
      {
        "x": 980.5,
        "y": 55.2,
      },
      {
        "x": 1060,
        "y": 55.2,
      },
      {
        "x": 1060,
        "y": 58.8,
      },
      {
        "x": 980.5,
        "y": 58.8,
      },
      {
        "x": 874.5,
        "y": 33.7,
      },
      {
        "x": 848,
        "y": 33.7,
      },
      {
        "x": 742,
        "y": 39,
      },
      {
        "x": 715.5,
        "y": 39,
      },
      {
        "x": 609.5,
        "y": 41.5,
      },
      {
        "x": 583,
        "y": 41.5,
      },
      {
        "x": 477,
        "y": 40.9,
      },
      {
        "x": 450.5,
        "y": 40.9,
      },
      {
        "x": 344.5,
        "y": 51,
      },
      {
        "x": 318,
        "y": 51,
      },
      {
        "x": 212,
        "y": 79,
      },
      {
        "x": 185.5,
        "y": 79,
      },
      {
        "x": 79.5,
        "y": 79.3,
      },
      {
        "x": 0,
        "y": 79.3,
      },
    ],
    "mid": [
      {
        "x": 0,
        "y": 77.5,
      },
      {
        "x": 79.5,
        "y": 77.5,
      },
      {
        "x": 185.5,
        "y": 77.1,
      },
      {
        "x": 212,
        "y": 77.1,
      },
      {
        "x": 318,
        "y": 49.2,
      },
      {
        "x": 344.5,
        "y": 49.2,
      },
      {
        "x": 450.5,
        "y": 39.1,
      },
      {
        "x": 477,
        "y": 39.1,
      },
      {
        "x": 583,
        "y": 39.7,
      },
      {
        "x": 609.5,
        "y": 39.7,
      },
      {
        "x": 715.5,
        "y": 37.2,
      },
      {
        "x": 742,
        "y": 37.2,
      },
      {
        "x": 848,
        "y": 31.9,
      },
      {
        "x": 874.5,
        "y": 31.9,
      },
      {
        "x": 980.5,
        "y": 57,
      },
      {
        "x": 1060,
        "y": 57,
      },
    ],
  },
  "range": {
    "from": 0,
    "lastTurn": 15,
    "maxFrom": 8,
    "minFrom": 0,
    "pendingTurn": 8,
    "selectedTurn": 2,
  },
  "scaleLabel": {
    "text": "100 MW",
    "x": 1052,
    "y": 14,
  },
  "scaleMw": 100,
  "selectedBlock": {
    "width": 132.5,
    "x": 265,
  },
  "width": 1060,
}
`;
